--- a/firebase.json
+++ b/firebase.json
@@ -2,10 +2,7 @@
   "hosting": {
     "public": "public",
     "rewrites": [
-      {
-        "source": "**/**",
-        "function": "next"
-      }
+      { "source": "**/**", "function": "next" }
     ]
   },
   "functions": {
