--- a/app/package.json
+++ b/app/package.json
@@ -2,9 +2,9 @@
   "name": "app",
   "version": "1.0.0",
   "dependencies": {
-    "next": "beta",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "next": "3.2.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
   },
   "scripts": {
     "dev": "next",
