--- a/functionsES6/package.json
+++ b/functionsES6/package.json
@@ -1,18 +1,17 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "apollo-server-express": "^1.1.2",
-    "body-parser": "^1.18.2",
-    "express": "^4.15.4",
-    "firebase-admin": "^5.2.1",
-    "firebase-functions": "^0.6.3",
-    "graphql": "^0.11.3",
-    "graphql-tools": "^1.2.3",
-    "next": "^3.2.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
-  "private": true
+    "apollo-server-express": "1.1.2",
+    "body-parser": "1.18.1",
+    "express": "4.15.4",
+    "firebase-admin": "5.2.1",
+    "firebase-functions": "0.6.3",
+    "graphql": "0.11.3",
+    "graphql-tools": "1.2.2",
+    "next": "3.2.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
+  }
 }
